--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/1.PNG
-   - assets/images/2.PNG
-   - assets/images/3.PNG
-   - assets/images/4.PNG
-   - assets/images/5.PNG
-   - assets/images/6.PNG
-   - assets/images/d.jpeg
+   - assets/images/
    
   #  - assets/images/user/
   #  - images\2.PNG
@@ -64,13 +58,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: OpenSans
-      fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf
-        - asset: assets/fonts/OpenSans-Italic.ttf
-        - asset: assets/fonts/OpenSans-Bold.ttf
-          weight: 700
+  # fonts:
+  #   - family: OpenSans
+  #     fonts:
+  #       - asset: assets/fonts/OpenSans-Regular.ttf
+  #       - asset: assets/fonts/OpenSans-Italic.ttf
+  #       - asset: assets/fonts/OpenSans-Bold.ttf
+  #         weight: 700
         # - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
